fix(registration): #1238 location search bar getting overlaped

--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -62,6 +62,10 @@ html, body {
   font-weight: 300;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
+  margin: 0!important;
+  left: 10px!important;
+  bottom: 30px!important;
+  top: initial!important;
 }
 
 #pac-input:focus {
